[gd_scene load_steps=4 format=4 uid="uid://cifuwbh5763gi"]

[ext_resource type="Script" uid="uid://bfsh151es3p66" path="res://Prefab/GUI/LevelEditor/InformationEditor/LevelEditorInformationEditor.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://biewbfqqa138j" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorMapShowBox.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dwwg5awviq8g2" path="res://Asset/Texture/TowerDefense/Background/TowerDefenseMap/Frontlawn/Frontlawn.jpg" id="3"]

[node name="LevelEditorInformationEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="CommandContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="CommandContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="TextContainer" type="VBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelNumberContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNumberContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "关卡编号"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNumberSpinBox" type="SpinBox" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNumberContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="LevelNameContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNameContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "关卡名"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNameLineEdit" type="LineEdit" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "文本中填入{LevelNumber}可以获取当前关卡编号"
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "PLAYERS_MORDEN_LEVEL_NAME"
context_menu_enabled = false
caret_blink = true

[node name="LevelDescriptionContainer" type="VBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelDescriptionContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "关卡进入介绍"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelDescriptionTextEdit" type="TextEdit" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelDescriptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "文本中填入{UserName}可以获取玩家当前名称"
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "PLAYERS_TRIP_TO_MODERN"
context_menu_enabled = false
caret_blink = true

[node name="HomeWorldContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/HomeWorldContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "主世界"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeWorldOptionButton" type="OptionButton" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/HomeWorldContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16

[node name="MapContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MapContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "地图"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapOptionButton" type="OptionButton" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MapContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 16
allow_reselect = true

[node name="BgmContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/BgmContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "背景音乐"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BgmOptionButton" type="OptionButton" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/BgmContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 16
allow_reselect = true

[node name="TalkContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TalkContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "Npc对话预设"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TalkOptionButton" type="OptionButton" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TalkContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 16
allow_reselect = true

[node name="TalkCheckBox" type="CheckBox" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TalkContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "启用自定义"

[node name="TutorialContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TutorialContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 1
text = "教程预设"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialOptionButton" type="OptionButton" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TutorialContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 16
allow_reselect = true

[node name="TutorialCheckBox" type="CheckBox" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TutorialContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "启用自定义"

[node name="MowerUseContainer" type="HBoxContainer" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MowerUseContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "使用小推车"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MowerUseCheckBox" type="CheckBox" parent="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MowerUseContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="MapShow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LevelEditorMapShowBox" type="TextureRect" parent="MapShow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -520.0
offset_top = 48.0
offset_right = -73.0
offset_bottom = 487.0
texture = ExtResource("2")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MapShow/LevelEditorMapShowBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.719
anchor_top = 0.453
anchor_right = 0.719
anchor_bottom = 0.453
offset_left = -273.393
offset_top = 137.133
offset_right = 70.607
offset_bottom = 209.133
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "地图预览"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapMask" type="ColorRect" parent="MapShow/LevelEditorMapShowBox"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -399.0
offset_top = 48.0
offset_right = -47.0
offset_bottom = 314.0

[node name="MapTexture" type="TextureRect" parent="MapShow/LevelEditorMapShowBox/MapMask"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_right = 2424.0
offset_bottom = 934.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.225, 0.225)
texture = ExtResource("3")
expand_mode = 1

[connection signal="value_changed" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNumberContainer/LevelNumberSpinBox" to="." method="LevelNumberSpinBoxValueChanged"]
[connection signal="text_changed" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelNameContainer/LevelNameLineEdit" to="." method="LevelNameLineEditTextChanged"]
[connection signal="text_changed" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/LevelDescriptionContainer/LevelDescriptionTextEdit" to="." method="LevelDescriptionLineEditTextChanged"]
[connection signal="item_selected" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/HomeWorldContainer/HomeWorldOptionButton" to="." method="HomeWorldOptionButtonItemSelected"]
[connection signal="item_selected" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MapContainer/MapOptionButton" to="." method="MapOptionButtonItemSelected"]
[connection signal="item_selected" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/BgmContainer/BgmOptionButton" to="." method="BgmOptionButtonItemSelected"]
[connection signal="item_selected" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TalkContainer/TalkOptionButton" to="." method="TalkOptionButtonItemSelected"]
[connection signal="toggled" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TalkContainer/TalkCheckBox" to="." method="TalkCheckBoxToggled"]
[connection signal="item_selected" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TutorialContainer/TutorialOptionButton" to="." method="TutorialOptionButtonItemSelected"]
[connection signal="toggled" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/TutorialContainer/TutorialCheckBox" to="." method="TutorialCheckBoxToggled"]
[connection signal="toggled" from="CommandContainer/ScrollContainer/HBoxContainer/TextContainer/MowerUseContainer/MowerUseCheckBox" to="." method="MowerUseCheckBoxToggled"]
